--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,9 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: center;
   width: 100%;
-  height: 70px;
-  background-color: var(--white-color);
+  height: 80px;
+  background-color: var(--yellow-color);
   color: var(--white-color);
 }
 .header-wrapper {
@@ -12,6 +11,7 @@
 }
 
 .header-wrapper a {
+  margin-left: 50px;
   text-decoration: none;
   color: var(--black-color);
 }
@@ -20,5 +20,5 @@
   text-decoration: underline;
 }
 .link {
-  padding: 50px;
+  /* padding: 10px; */
 }
