--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-@import url("https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;800;900&display=swap");
 
 * {
   box-sizing: border-box;
-  font-family: "Cardo", serif;
+  font-family: "Montserrat", sans-serif;
 }
 :root {
   --black-color: #100f0f;
