--- a/src/pages/page-setting.css
+++ b/src/pages/page-setting.css
@@ -11,7 +11,15 @@ a::after {
 .product-page {
   margin-top: 30px;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 70px);
+}
+.products-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 40px;
+  min-height: 600px;
+  max-height: 100%;
 }
 .static__title {
   display: flex;
@@ -19,16 +27,10 @@ a::after {
   width: 100%;
   font-size: 22pt;
   margin: 30px 0;
-  padding: 20px;
+  padding: 10px 20px;
   font-weight: 600;
 }
-.products-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  /* flex-direction: column; */
-  gap: 40px;
-}
+
 .title-block {
   max-width: 400px;
   font-size: 14pt;
@@ -49,10 +51,14 @@ a::after {
   display: flex;
   align-items: center;
 }
+.ingredients {
+  list-style: disc;
+  padding: 5;
+}
 .meal-img-block {
   box-shadow: var(--box-shadow);
-  min-width: 300px;
   max-width: 600px;
+  max-height: 600px;
 }
 .img {
   width: 100%;
