--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,26 @@
 .App {
-  /* padding: 0 70px;
-
-  @media all and (max-width: 1024px) {
-    padding: 0 70px;
-  }
-  @media all and (max-width: 768px) {
-    padding: 0 50px;
-  }
-  @media all and (max-width: 480px) {
-    padding: 0 50px;
-  }
-  @media all and (max-width: 320px) {
-    padding: 10px;
-  } */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.app-wrapper {
+  width: 1400px;
+}
+
+/* @media all and (max-width: 1024px) {
+  .app-wrapper {
+    padding: 0 50px;
+  }
+}
+@media all and (max-width: 768px) {
+  .app-wrapper {
+    padding: 0 50px;
+  }
+}
+@media all and (max-width: 320px) {
+  .app-wrapper {
+    padding: 0 10px;
+  }
+} */
