--- a/src/components/header/ui/header.css
+++ b/src/components/header/ui/header.css
@@ -15,6 +15,7 @@
   color: var(--white-color);
 }
 .header__wrapper {
+  max-width: 1400px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
